--- a/app/src/main/res/layout/activity_home_screen.xml
+++ b/app/src/main/res/layout/activity_home_screen.xml
@@ -1,32 +1,21 @@
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@drawable/yogi_background"
     tools:context=".activities.HomeScreen">
 
-    <!-- The primary full-screen view. This can be replaced with whatever view
-         is needed to present your content, e.g. VideoView, SurfaceView,
-         TextureView, etc. -->
     <TextView
         android:id="@+id/fullscreen_content"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:gravity="center"
         android:keepScreenOn="true"
-        android:text="@string/dummy_content"
-        android:textColor="#FFFFFF"
-        android:textSize="55sp"
-        android:textStyle="bold"
-        android:shadowColor="#000000"
-        android:shadowDx="2"
-        android:shadowDy="2"
-        android:shadowRadius="1"
+        style="@style/applicationName"
+        android:text="@string/title_content"
+        />
 
-    />
-
-    <!-- This FrameLayout insets its children based on system windows using
-         android:fitsSystemWindows. -->
     <FrameLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
@@ -39,17 +28,18 @@
             android:layout_height="wrap_content"
             android:layout_gravity="bottom|center_horizontal"
             android:background="@color/black_overlay"
-            android:orientation="horizontal"
-            tools:ignore="UselessParent">
+            android:orientation="horizontal">
 
             <Button
                 android:id="@+id/btn_start_application"
-                style="?metaButtonBarButtonStyle"
                 android:layout_width="0dp"
-                android:layout_height="90dp"
-                android:textSize="20sp"
+                android:layout_height="@dimen/button_height"
                 android:layout_weight="1"
-                android:text="@string/dummy_button" />
+                android:text="@string/app_start_button"
+                android:textSize="20sp"
+                android:background="@android:color/transparent"
+                android:textColor="@color/colorAccent"
+            />
 
         </LinearLayout>
     </FrameLayout>
