--- a/app/src/main/res/layout/activity_home_screen.xml
+++ b/app/src/main/res/layout/activity_home_screen.xml
@@ -1,6 +1,5 @@
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@drawable/yogi_background"
@@ -8,13 +7,12 @@
 
     <TextView
         android:id="@+id/fullscreen_content"
+        style="@style/applicationName"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:gravity="center"
         android:keepScreenOn="true"
-        style="@style/applicationName"
-        android:text="@string/title_content"
-        />
+        android:text="@string/title_content" />
 
     <FrameLayout
         android:layout_width="match_parent"
@@ -28,18 +26,18 @@
             android:layout_height="wrap_content"
             android:layout_gravity="bottom|center_horizontal"
             android:background="@color/black_overlay"
-            android:orientation="horizontal">
+            android:orientation="horizontal"
+            tools:ignore="UselessParent">
 
             <Button
                 android:id="@+id/btn_start_application"
                 android:layout_width="0dp"
                 android:layout_height="@dimen/button_height"
                 android:layout_weight="1"
-                android:text="@string/app_start_button"
-                android:textSize="20sp"
                 android:background="@android:color/transparent"
+                android:text="@string/app_start_button"
                 android:textColor="@color/colorAccent"
-            />
+                android:textAppearance="?android:attr/textAppearanceLarge"/>
 
         </LinearLayout>
     </FrameLayout>
