--- a/app/src/main/res/layout/activity_player.xml
+++ b/app/src/main/res/layout/activity_player.xml
@@ -10,46 +10,40 @@
     <android.support.design.widget.AppBarLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:theme="@style/AppTheme.AppBarOverlay">
+        android:theme="@style/AppTheme.AppBarOverlay"
+        >
 
         <android.support.v7.widget.Toolbar
-            android:id="@+id/toolbar"
+            android:background="#333333"
+            android:theme="@style/Base.ThemeOverlay.AppCompat.Dark.ActionBar"
             android:layout_width="match_parent"
-            android:layout_height="?attr/actionBarSize"
-            android:background="?attr/colorPrimary"
-            app:popupTheme="@style/AppTheme.PopupOverlay" />
+            android:layout_height="100dp">
+
+            <ImageView
+                android:id="@+id/selected_track_image"
+                android:layout_width="92dp"
+                android:layout_height="92dp"/>
+
+            <TextView
+                android:id="@+id/selected_track_title"
+                android:paddingLeft="8dp"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"/>
+
+            <ImageView
+                android:id="@+id/player_control"
+                android:layout_gravity="right"
+                android:layout_width="@dimen/image_size"
+                android:layout_height="@dimen/image_size"/>
+
+        </android.support.v7.widget.Toolbar>
 
     </android.support.design.widget.AppBarLayout>
 
-    <include layout="@layout/content_player" />
-
-    <android.support.v7.widget.Toolbar
-        android:background="#333333"
-        android:theme="@style/Base.ThemeOverlay.AppCompat.Dark.ActionBar"
+    <ListView
+        android:id="@+id/track_list_view"
         android:layout_width="match_parent"
-        android:layout_height="100dp"
-        android:layout_alignParentBottom="true"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true">
-
-        <ImageView
-            android:id="@+id/selected_track_image"
-            android:layout_width="92dp"
-            android:layout_height="92dp"/>
-
-        <TextView
-            android:id="@+id/selected_track_title"
-            android:paddingLeft="8dp"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"/>
-
-        <ImageView
-            android:id="@+id/player_control"
-            android:layout_gravity="right"
-            android:layout_width="@dimen/image_size"
-            android:layout_height="@dimen/image_size"/>
-
-    </android.support.v7.widget.Toolbar>
-
+        android:layout_height="match_parent"
+        android:layout_marginTop="@dimen/activity_big_margin"/>
 
 </android.support.design.widget.CoordinatorLayout>
