--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -1,9 +1,13 @@
 <resources>
     <!-- Default screen margins, per the Android Design guidelines. -->
+    <dimen name="activity_small_margin">8dp</dimen>
     <dimen name="activity_horizontal_margin">16dp</dimen>
     <dimen name="activity_vertical_margin">16dp</dimen>
-    <dimen name="button_height">90dp</dimen>
+    <dimen name="activity_default_padding">16dp</dimen>
+    <dimen name="activity_default_margin">60dp</dimen>
+    <dimen name="activity_big_margin">100dp</dimen>
 
+    <dimen name="button_height">90dp</dimen>
     <dimen name="row_height">72dp</dimen>
     <dimen name="image_padding">4dp</dimen>
     <dimen name="image_size">48dp</dimen>
