--- a/app/src/main/res/layout/category_row.xml
+++ b/app/src/main/res/layout/category_row.xml
@@ -12,11 +12,15 @@
         <RelativeLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:padding="@dimen/activity_default_padding">
 
             <ImageView
                 android:id="@+id/category_img"
+                android:layout_width="@dimen/row_height"
+                android:layout_height="@dimen/row_height"
                 android:layout_alignParentLeft="true"
                 android:layout_alignParentTop="true"
+                android:layout_marginRight="@dimen/activity_small_margin"
                 android:scaleType="centerCrop" />
 
             <TextView
@@ -25,6 +29,7 @@
                 android:layout_height="wrap_content"
                 android:layout_alignParentTop="true"
                 android:layout_toRightOf="@+id/category_img"
+                android:textAppearance="?android:attr/textAppearanceLarge" />
 
             <TextView
                 android:id="@+id/category_desc"
